--- a/pkgmeta.yaml
+++ b/pkgmeta.yaml
@@ -1,6 +1,7 @@
 manual-changelog: CHANGELOG.txt
 ignore:
   - README.md
+  - pkgmeta.yaml
 enable-nolib-creation: no
 externals:
   libs/LibStub: https://repos.curseforge.com/wow/libstub/trunk
